Wed May 14 16:50:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/eval.rb : Add checkpoints to ease preprocessing error
	  investigation.

Sat May 10 22:31:55 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.14
	  - Support function-like macro replacement with variable arguments.

Sat May 10 22:07:09 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/macro.rb : Revise behavior of function-like macro
	  replacement in order to enforce the replacement even if the number of
	  arguments is less than the number of parameters.
	* features/code_check/W0830.feature : Ditto.

Sat May 10 13:58:35 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.13
	  - Support function-like macro replacement with variable arguments.

Sat May 10 12:44:20 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/macro.rb : Support function-like macro replacement
	  with variable arguments.
	* lib/adlint/cpp/eval.rb : Ditto.

	* features/code_check/W0835.feature : Add scenario to check that the
	  function-like macro with __VA_ARGS__ can be replaced correctly.
	* MANIFEST : Ditto.

Sat Apr 12 09:08:17 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.12
	  - Fix the type and object model in order to correctly manage unnamed
	    struct or union members.
	  - Add examination package initializer.
	  - Revise behavior of the CMA code structure collection so that an
	    optional examination package can output its own special
	    met-records.

Thu Apr 10 18:48:43 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.11
	  - Fix the type and object model in order to correctly manage unnamed
	    struct or union members.
	  - Add examination package initializer.
	  - Revise behavior of the CMA code structure collection so that an
	    optional examination package can output its own special
	    met-records.
